Prepared for heroku deployment, + some minor alignment & style changes.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/VocabularyAugmenterFavicon.ico" />
+    <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/icons/VocabularyAugmenterFavicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="Vocabulary Enhancer"
       content="A site for improving your english vocabulary."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Vocabulary Augmenter</title>
